Fixes layout shift

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -24,6 +24,7 @@ body {
   display: grid;
   grid-gap: var(--grid-gap);
   align-content: flex-start;
+  grid-template-columns: var(--column-width);
 }
 
 h1,
@@ -42,7 +43,6 @@ h3 {
 .wb-login,
 .wb-add {
   display: grid;
-  grid-template-columns: var(--column-width);
   grid-gap: 10px;
 }
 
@@ -61,7 +61,6 @@ button {
 }
 
 .wb-word {
-  max-width: var(--column-width);
   display: grid;
   grid-gap: 5px;
 }
